--- a/style.css
+++ b/style.css
@@ -58,8 +58,31 @@ body {
 .botoes {
   display: block;
 }
+ .ativo{
+  background-color: var(--botao-ativo);
+border-bottom: 4px solid var(--verde);
+    }
+}
+.abas-textos{
+    background-color: var(--texto-fundo);
+   border-bottom: 4px solid var(--verde);
+}
+.aba-conteudo.ativo {
+  display: block;
+}
+.aba-conteudo{
+    display: none;
+}
+.aba-conteudo-titulo-principal{
+    font-size: 28px;
+    text-align: center;
+}
 
-
+.aba-conteudo-titulo-secundario{
+    text-align: center;
+    color: var(--verde);
+    text-transform: uppercase;
+}
 @media screen and (min-width: 768px) {
   .botoes{
     display:flex;
@@ -70,8 +93,5 @@ body {
   .botao:last-child{
     border-radius:0 40px 0 0
     }
-    .ativo{
-  background-color: var(--botao-ativo);
-border-bottom: 4px solid var(--verde);
-    }
-}
+   
+
